Mash: fix colored app window frames.

Previously, in Mash, Ash used an EmptyDraggableNonClientFrameView and
Chrome drew an AppWindowFrameView on top of that. Events went to the
former, which didn't know about caption buttons, and AppWindowFrameView
draws Windows-style caption buttons, so both appearance and behavior
were broken. (In classic Ash, Chrome uses a CustomFrameViewAsh.)

Now, in Mash, Chrome doesn't have a NonClientFrameView, but tells Ash
about the frame's colors via mus init properties. The Ash-process
CustomFrameViewAsh will be painted correctly and be able to handle
events.

Bug: 766712
Change-Id: Ic272e5755d0ac9af325b512bb0c3ccbe87fcb2c8
Reviewed-on: https://chromium-review.googlesource.com/1023036
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Commit-Queue: Evan Stade <estade@chromium.org>
Cr-Commit-Position: refs/heads/master@{#553088}
Former-commit-id: 1145abadfce5c466cdff408925707a99a0d24a89