ash/wm/property_util.h
@@ -11,6 +11,9 @@
 #include <string>
 #include <vector>
 
+#include "base/optional.h"
+#include "third_party/skia/include/core/SkColor.h"
+
 namespace aura {
 class PropertyConverter;
 class Window;
@@ -58,6 +61,9 @@ bool GetInitialBounds(const InitProperties& properties, gfx::Rect* bounds);
 bool GetWindowPreferredSize(const InitProperties& properties, gfx::Size* size);
 
 bool ShouldRemoveStandardFrame(const InitProperties& properties);
+
+base::Optional<SkColor> GetFrameColor(const InitProperties& properties,
+                                      bool active);
 
 bool ShouldEnableImmersive(const InitProperties& properties);
 
