chrome/browser/ui/views/apps/chrome_native_app_window_views.cc
@@ -119,7 +119,7 @@ void ChromeNativeAppWindowViews::InitializeDefaultWindow(
     const AppWindow::CreateParams& create_params) {
   views::Widget::InitParams init_params(views::Widget::InitParams::TYPE_WINDOW);
   init_params.delegate = this;
-  init_params.remove_standard_frame = IsFrameless() || has_frame_color_;
+  init_params.remove_standard_frame = ShouldRemoveStandardFrame();
   init_params.use_system_default_icon = true;
   if (create_params.alpha_enabled) {
     init_params.opacity = views::Widget::InitParams::TRANSLUCENT_WINDOW;
@@ -225,6 +225,10 @@ void ChromeNativeAppWindowViews::InitializePanelWindow(
 views::NonClientFrameView*
 ChromeNativeAppWindowViews::CreateStandardDesktopAppFrame() {
   return views::WidgetDelegateView::CreateNonClientFrameView(widget());
+}
+
+bool ChromeNativeAppWindowViews::ShouldRemoveStandardFrame() {
+  return IsFrameless() || has_frame_color_;
 }
 
 // ui::BaseWindow implementation.
